# IndexForge

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PROJECT.md  README.md  SETUP_GUIDE.md  architecture.md  chat-history.md  docker-compose.yml  progress.md
crates/ms-cli/: Cargo.toml
crates/ms-cli/src/: main.rs
crates/ms-core/: Cargo.toml
crates/ms-core/src/: chunk.rs  config.rs  lib.rs  score.rs
crates/ms-index/: Cargo.toml
crates/ms-index/src/: bm25.rs  fuzzy.rs  lib.rs  symspell.rs  vector.rs
crates/ms-ingest/: Cargo.toml
crates/ms-ingest/src/: embedder.rs  lib.rs
crates/ms-ingest/src/chunker/: code.rs  mod.rs  sentence.rs  token.rs
crates/ms-ingest/src/loader/: docx.rs  mod.rs  pdf.rs  structured.rs  text.rs  zim.rs
crates/ms-python/: Cargo.toml  pyproject.toml  test.py
crates/ms-python/src/: lib.rs
crates/ms-rag/: Cargo.toml
crates/ms-rag/src/: gemini.rs  lib.rs  llm_reranker.rs  ollama.rs  openrouter.rs  pipeline.rs  provider.rs
crates/ms-rerank/: Cargo.toml
crates/ms-rerank/src/: cross_encoder.rs  lib.rs
crates/ms-search/: Cargo.toml
crates/ms-search/src/: lib.rs  merge.rs  router.rs
crates/ms-server/: Cargo.toml
crates/ms-server/src/: main.rs  state.rs
crates/ms-server/src/routes/: health.rs  ingest.rs  mod.rs  search.rs
migrations/: 20240101000000_init.sql
my-notes/: PROJECT.md
scripts/: download_models.sh
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css
