[workspace]
members = [
    "crates/ms-core",
    "crates/ms-ingest",
    "crates/ms-index",
    "crates/ms-search",
    "crates/ms-rerank",
    "crates/ms-rag",
    "crates/ms-server",
    "crates/ms-cli",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sqlx        = { version = "0.7", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
tantivy     = "0.21"
fastembed   = "3"
uuid        = { version = "1", features = ["v4"] }
axum        = "0.7"
clap        = { version = "4", features = ["derive"] }
tracing     = "0.1"
tracing-subscriber = "0.3"
anyhow      = "1"
async-trait = "0.1"
reqwest     = { version = "0.11", features = ["json"] }
