[package]
name = "ms-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ms-core = { path = "../ms-core" }
ms-ingest = { path = "../ms-ingest" }
ms-index = { path = "../ms-index" }
ms-search = { path = "../ms-search" }
clap = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tantivy = { workspace = true }
sqlx = { version = "0.7", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
pgvector = { version = "0.3", features = ["sqlx"] }
dotenvy = "0.15"
walkdir = "2"
