[package]
name = "ms-index"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy  = "0.21"
sqlx     = { version = "0.7", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
pgvector = { version = "0.3", features = ["sqlx"] }
anyhow   = "1"
tokio    = { workspace = true }
uuid     = { workspace = true }