[package]
name = "ms-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
ms-core     = { path = "../ms-core" }
anyhow      = { workspace = true }
async-trait = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
