[package]
name = "ms-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ms-core   = { path = "../ms-core" }
ms-ingest = { path = "../ms-ingest" }
ms-index  = { path = "../ms-index" }
ms-search = { path = "../ms-search" }
ms-rerank = { path = "../ms-rerank" }
ms-rag    = { path = "../ms-rag" }

axum      = { workspace = true }
tokio     = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
anyhow    = { workspace = true }
sqlx      = { workspace = true }
tantivy   = { workspace = true }
tracing   = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenvy   = "0.15"
uuid      = { workspace = true }
walkdir   = "2.4"
pgvector  = { workspace = true }
